log
Thu, Mar 20, 2025  1:22:25 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Thu, Mar 20, 2025  5:10:21 PM: 
 tests:  0|5
total_score: 0/70
5f434fc
Thu, Mar 20, 2025  5:52:46 PM: 
 exercises.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
 tests:  2|3
total_score: 20/70
c85a793
Thu, Mar 20, 2025  6:05:06 PM: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  3|2
total_score: 40/70
6473e8a
Fri, Mar 21, 2025  6:15:54 PM: 
 tests:  3|2
total_score: 40/70
5206940
Fri, Mar 21, 2025  6:16:18 PM: 
 exercises.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  3|2
total_score: 40/70
1776ed6
Fri, Mar 21, 2025  6:17:22 PM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  4|1
total_score: 50/70
8255ee2
Fri, Mar 21, 2025  6:30:40 PM: 
 exercises.c | 16 ++++++++++++++++
 1 file changed, 16 insertions(+)
 tests:  6|1
total_score: 60/70
e6514f1
Fri, Mar 21, 2025  6:31:28 PM: 
 exercises.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  7|1
total_score: 60/70
a87d3cd
Fri, Mar 21, 2025  7:26:54 PM: 
 exercises.c | 29 ++++++++++++++++++++++++++---
 1 file changed, 26 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:134:19: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(P1, cadena[i]);
                   ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:138:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(pAux, cadena[i]);
                     ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
49be509
Fri, Mar 21, 2025  7:29:21 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'parentesisBalanceados':
exercises.c:134:19: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(P1, cadena[i]);
                   ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
In file included from test.c:5:0:
exercises.c:138:21: error: passing argument 2 of 'push' makes pointer from integer without a cast [-Werror=int-conversion]
          push(pAux, cadena[i]);
                     ^~~~~~
In file included from exercises.c:7:0,
                 from test.c:5:
stack.h:11:6: note: expected 'void *' but argument is of type 'char'
 void push(Stack *stack, void *data) { pushFront(stack, data); }
      ^~~~
cc1.exe: all warnings being treated as errors
Compilation failed
223791f
